// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt acp --help 1`] = `
"mongolgpt acp

ACP (Agent Client Protocol) сервер эхлүүлэх

Options:
  -h, --help         тусламж харуулах                                                      [boolean]
  -v, --version      хувилбарын дугаар харуулах                                            [boolean]
      --print-logs   логийг stderr рүү хэвлэх                                              [boolean]
      --log-level    логийн түвшин              [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         гадаад plugin-гүй ажиллуулах                                          [boolean]
      --port         сонсох порт                                               [number] [default: 0]
      --hostname     сонсох хостын нэр                               [string] [default: "127.0.0.1"]
      --mdns         mDNS үйлчилгээний илрүүлэлтийг идэвхжүүлэх (хостын нэрийг заагаагүй бол 0.0.0.0
                     ашиглана)                                            [boolean] [default: false]
      --mdns-domain  mDNS үйлчилгээний өөрийн домэйн нэр (анхдагч: mongolgpt.local)
                                                               [string] [default: "mongolgpt.local"]
      --cors         CORS-д зөвшөөрөх нэмэлт домэйнүүд                         [array] [default: []]
      --cwd          ажлын хавтас [string] [default: "<HOME>"]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt mcp --help 1`] = `
"mongolgpt mcp

MCP (Model Context Protocol) серверүүдийг удирдах

Commands:
  mongolgpt mcp add [name]     MCP сервер нэмэх
  mongolgpt mcp list           MCP серверүүд болон төлөвийг жагсаах                    [aliases: ls]
  mongolgpt mcp auth [name]    OAuth идэвхтэй MCP серверт нэвтрэх
  mongolgpt mcp logout [name]  MCP серверийн OAuth нэвтрэх мэдээллийг устгах
  mongolgpt mcp debug <name>   MCP серверийн OAuth холболтыг оношлох

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt attach --help 1`] = `
"mongolgpt attach <url>

ажиллаж буй mongolgpt серверт холбогдох

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          тусламж харуулах                                                     [boolean]
  -v, --version       хувилбарын дугаар харуулах                                           [boolean]
      --print-logs    логийг stderr рүү хэвлэх                                             [boolean]
      --log-level     логийн түвшин             [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          гадаад plugin-гүй ажиллуулах                                         [boolean]
      --dir           ажиллуулах хавтас                                                     [string]
  -c, --continue      сүүлийн сешнийг үргэлжлүүлэх                                         [boolean]
  -s, --session       үргэлжлүүлэх сешний ID                                                [string]
      --fork          үргэлжлүүлэхдээ сешнийг fork хийх (--continue эсвэл --session-тэй ашиглана)
                                                                                           [boolean]
  -p, --password      үндсэн баталгаажуулалтын нууц үг (анхдагч нь MONGOLGPT_SERVER_PASSWORD)
                                                                                            [string]
  -u, --username      үндсэн баталгаажуулалтын хэрэглэгчийн нэр (анхдагч нь
                      MONGOLGPT_SERVER_USERNAME эсвэл 'mongolgpt')                          [string]
      --mini          жижиг интерактив интерфэйс эхлүүлэх                 [boolean] [default: false]
      --no-replay     resume болон resize-ийн дараа mini сешний түүхийг дахин харуулахгүй  [boolean]
      --replay-limit  mini replay-д харагдах түүхийг хамгийн шинэ N мессежээр хязгаарлах    [number]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt run --help 1`] = `
"mongolgpt run [message..]

мессежтэйгээр MongolGPT ажиллуулах

Positionals:
  message  илгээх мессеж                                                       [array] [default: []]

Options:
  -h, --help                          тусламж харуулах                                     [boolean]
  -v, --version                       хувилбарын дугаар харуулах                           [boolean]
      --print-logs                    логийг stderr рүү хэвлэх                             [boolean]
      --log-level                     логийн түвшин
                                                [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                          гадаад plugin-гүй ажиллуулах                         [boolean]
      --command                       ажиллуулах команд; аргументэд message ашиглана        [string]
  -c, --continue                      сүүлийн сешнийг үргэлжлүүлэх                         [boolean]
  -s, --session                       үргэлжлүүлэх сешний ID                                [string]
      --fork                          үргэлжлүүлэхээс өмнө сешнийг салбарлан үргэлжлүүлэх
                                      (--continue эсвэл --session шаардлагатай)            [boolean]
      --share                         сешнийг хуваалцах                                    [boolean]
  -m, --model                         ашиглах загвар, provider/model хэлбэрээр өгнө         [string]
      --agent                         ашиглах агент                                         [string]
      --format                        формат: default (форматлагдсан) эсвэл json (түүхий JSON үйл
                                      явдал)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file                          мессежид хавсаргах файл(ууд)                           [array]
      --title                         сешний гарчиг (утга өгөөгүй бол богиносгосон prompt ашиглана)
                                                                                            [string]
      --attach                        ажиллаж буй MongolGPT серверт холбогдох (жишээ:
                                      http://localhost:4096)                                [string]
  -p, --password                      үндсэн баталгаажуулалтын нууц үг (анхдагч нь
                                      MONGOLGPT_SERVER_PASSWORD)                            [string]
  -u, --username                      үндсэн баталгаажуулалтын хэрэглэгчийн нэр (анхдагч нь
                                      MONGOLGPT_SERVER_USERNAME эсвэл 'mongolgpt')          [string]
      --dir                           ажиллуулах хавтас, attach хийж байвал алсын сервер дээрх зам
                                                                                            [string]
      --port                          локал серверийн порт (утга өгөөгүй бол санамсаргүй порт
                                      ашиглана)                                             [number]
      --variant                       загварын хувилбар (үйлчилгээ үзүүлэгчээс хамаарах бодолтын
                                      түвшин, жишээ: high, max, minimal)                    [string]
      --thinking                      бодох явцын хэсгүүдийг харуулах                      [boolean]
      --dangerously-skip-permissions  шууд deny хийгдээгүй permission-уудыг автоматаар зөвшөөрөх
                                      (аюултай!)                          [boolean] [default: false]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt debug --help 1`] = `
"mongolgpt debug

debug болон асуудал оношлох хэрэгслүүд

Commands:
  mongolgpt debug config        шийдэгдсэн тохиргоог харуулах
  mongolgpt debug lsp           LSP debug хийх хэрэгслүүд
  mongolgpt debug rg            ripgrep debug хийх хэрэгслүүд
  mongolgpt debug file          файлын систем debug хийх хэрэгслүүд
  mongolgpt debug scrap         мэдэгдэж буй бүх төслийг жагсаах
  mongolgpt debug skill         боломжтой бүх skill-ийг жагсаах
  mongolgpt debug snapshot      snapshot debug хийх хэрэгслүүд
  mongolgpt debug startup       startup timing хэвлэх
  mongolgpt debug agent <name>  agent тохиргооны дэлгэрэнгүйг харуулах
  mongolgpt debug v2            v2 catalog болон built-in plugin-уудыг debug хийх
  mongolgpt debug info          debug мэдээлэл харуулах
  mongolgpt debug paths         глобал замуудыг харуулах (data, config, cache, state)
  mongolgpt debug wait          хязгааргүй хүлээх (debug хийхэд)

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt providers --help 1`] = `
"mongolgpt providers

AI үйлчилгээ үзүүлэгч болон итгэмжлэлүүдийг удирдах

Commands:
  mongolgpt providers list               үйлчилгээ үзүүлэгч болон итгэмжлэлүүдийг жагсаах
                                                                                       [aliases: ls]
  mongolgpt providers login [url]        үйлчилгээ үзүүлэгчид нэвтрэх
  mongolgpt providers logout [provider]  тохируулсан үйлчилгээ үзүүлэгчээс гарах

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt agent --help 1`] = `
"mongolgpt agent

agent-уудыг удирдах

Commands:
  mongolgpt agent create  шинэ agent үүсгэх
  mongolgpt agent list    боломжтой бүх agent-ийг жагсаах

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt upgrade --help 1`] = `
"mongolgpt upgrade [target]

mongolgpt-ийг хамгийн сүүлийн эсвэл тодорхой хувилбар руу шинэчлэх

Positionals:
  target  шинэчлэх хувилбар, жишээ нь '0.1.48' эсвэл 'v0.1.48'                              [string]

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]
  -m, --method      ашиглах суулгалтын арга
                          [string] [choices: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt uninstall --help 1`] = `
"mongolgpt uninstall

mongolgpt-ийг устгаж, холбоотой файлуудыг цэвэрлэх

Options:
  -h, --help         тусламж харуулах                                                      [boolean]
  -v, --version      хувилбарын дугаар харуулах                                            [boolean]
      --print-logs   логийг stderr рүү хэвлэх                                              [boolean]
      --log-level    логийн түвшин              [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         гадаад plugin-гүй ажиллуулах                                          [boolean]
  -c, --keep-config  тохиргооны файлуудыг үлдээх                          [boolean] [default: false]
  -d, --keep-data    сешний өгөгдөл болон агшин хуулбаруудыг үлдээх       [boolean] [default: false]
      --dry-run      устгахгүйгээр юу устахыг урьдчилан харуулах          [boolean] [default: false]
  -f, --force        баталгаажуулах асуултуудыг алгасах                   [boolean] [default: false]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt serve --help 1`] = `
"mongolgpt serve

headless MongolGPT сервер эхлүүлэх

Options:
  -h, --help         тусламж харуулах                                                      [boolean]
  -v, --version      хувилбарын дугаар харуулах                                            [boolean]
      --print-logs   логийг stderr рүү хэвлэх                                              [boolean]
      --log-level    логийн түвшин              [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         гадаад plugin-гүй ажиллуулах                                          [boolean]
      --port         сонсох порт                                               [number] [default: 0]
      --hostname     сонсох хостын нэр                               [string] [default: "127.0.0.1"]
      --mdns         mDNS үйлчилгээний илрүүлэлтийг идэвхжүүлэх (хостын нэрийг заагаагүй бол 0.0.0.0
                     ашиглана)                                            [boolean] [default: false]
      --mdns-domain  mDNS үйлчилгээний өөрийн домэйн нэр (анхдагч: mongolgpt.local)
                                                               [string] [default: "mongolgpt.local"]
      --cors         CORS-д зөвшөөрөх нэмэлт домэйнүүд                         [array] [default: []]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt web --help 1`] = `
"mongolgpt web

MongolGPT сервер эхлүүлж web интерфэйс нээх

Options:
  -h, --help         тусламж харуулах                                                      [boolean]
  -v, --version      хувилбарын дугаар харуулах                                            [boolean]
      --print-logs   логийг stderr рүү хэвлэх                                              [boolean]
      --log-level    логийн түвшин              [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         гадаад plugin-гүй ажиллуулах                                          [boolean]
      --port         сонсох порт                                               [number] [default: 0]
      --hostname     сонсох хостын нэр                               [string] [default: "127.0.0.1"]
      --mdns         mDNS үйлчилгээний илрүүлэлтийг идэвхжүүлэх (хостын нэрийг заагаагүй бол 0.0.0.0
                     ашиглана)                                            [boolean] [default: false]
      --mdns-domain  mDNS үйлчилгээний өөрийн домэйн нэр (анхдагч: mongolgpt.local)
                                                               [string] [default: "mongolgpt.local"]
      --cors         CORS-д зөвшөөрөх нэмэлт домэйнүүд                         [array] [default: []]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt models --help 1`] = `
"mongolgpt models [provider]

боломжтой бүх загварыг жагсаах

Positionals:
  provider  загвар шүүх provider ID                                                         [string]

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]
      --verbose     загварын дэлгэрэнгүй гаралт ашиглах (өртөг зэрэг мета өгөгдөл орно)    [boolean]
      --refresh     models.dev-ээс загварын кэшийг шинэчлэх                                [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt stats --help 1`] = `
"mongolgpt stats

токены хэрэглээ болон өртгийн статистик харуулах

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]
      --days        сүүлийн N өдрийн статистик харуулах (анхдагч: бүх хугацаа)              [number]
      --tools       харуулах tool-ийн тоо (анхдагч: бүгд)                                   [number]
      --models      загварын статистик харуулах (анхдагч: нуусан). Top N харуулах бол тоо өгнө, үгүй
                    бол бүгдийг харуулна
      --project     төслөөр шүүх (анхдагч: бүх төсөл, хоосон string: одоогийн төсөл)        [string]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt export --help 1`] = `
"mongolgpt export [sessionID]

сешний өгөгдлийг JSON хэлбэрээр export хийх

Positionals:
  sessionID  export хийх сешний ID                                                          [string]

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]
      --sanitize    transcript болон файлын эмзэг өгөгдлийг нуух                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt import --help 1`] = `
"mongolgpt import <file>

сешний өгөгдлийг JSON файл эсвэл URL-аас import хийх

Positionals:
  file  JSON файлын зам эсвэл share URL                                          [string] [required]

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt github --help 1`] = `
"mongolgpt github

GitHub agent удирдах

Commands:
  mongolgpt github install  GitHub agent суулгах
  mongolgpt github run      GitHub agent ажиллуулах

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt pr --help 1`] = `
"mongolgpt pr <number>

GitHub PR branch татаж checkout хийгээд mongolgpt ажиллуулах

Positionals:
  number  checkout хийх PR дугаар                                                [number] [required]

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt session --help 1`] = `
"mongolgpt session

сешнүүдийг удирдах

Commands:
  mongolgpt session list                сешнүүдийг жагсаах
  mongolgpt session delete <sessionID>  сешн устгах

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt plugin --help 1`] = `
"mongolgpt plugin <module>

plugin суулгаж тохиргоог шинэчлэх

Positionals:
  module  npm module-ийн нэр                                                     [string] [required]

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]
  -g, --global      глобал тохиргоонд суулгах                             [boolean] [default: false]
  -f, --force       байгаа plugin хувилбарыг солих                        [boolean] [default: false]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt db --help 1`] = `
"mongolgpt db

database хэрэгслүүд

Commands:
  mongolgpt db [query]     интерактив sqlite3 shell нээх эсвэл query ажиллуулах            [default]
  mongolgpt db path        database-ийн замыг хэвлэх

Positionals:
  query  ажиллуулах SQL query                                                               [string]

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]
      --format      гаралтын формат               [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt mcp list --help 1`] = `
"mongolgpt mcp list

MCP серверүүд болон төлөвийг жагсаах

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt mcp add --help 1`] = `
"mongolgpt mcp add [name]

MCP сервер нэмэх

Positionals:
  name  MCP серверийн нэр                                                                   [string]

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]
      --url         алсын MCP серверийн URL                                                 [string]
      --env         локал MCP серверийн орчны хувьсагч (KEY=VALUE)                           [array]
      --header      алсын MCP серверийн HTTP header (KEY=VALUE)                              [array]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt mcp auth --help 1`] = `
"mongolgpt mcp auth [name]

OAuth идэвхтэй MCP серверт нэвтрэх

Commands:
  mongolgpt mcp auth list  OAuth боломжтой MCP серверүүд болон нэвтрэлтийн төлөвийг жагсаах
                                                                                       [aliases: ls]

Positionals:
  name  MCP серверийн нэр                                                                   [string]

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt mcp logout --help 1`] = `
"mongolgpt mcp logout [name]

MCP серверийн OAuth нэвтрэх мэдээллийг устгах

Positionals:
  name  MCP серверийн нэр                                                                   [string]

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt providers list --help 1`] = `
"mongolgpt providers list

үйлчилгээ үзүүлэгч болон итгэмжлэлүүдийг жагсаах

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt providers login --help 1`] = `
"mongolgpt providers login [url]

үйлчилгээ үзүүлэгчид нэвтрэх

Positionals:
  url  MongolGPT нэвтрэлтийн үйлчилгээ үзүүлэгч                                             [string]

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]
  -p, --provider    нэвтрэх үйлчилгээ үзүүлэгчийн ID эсвэл нэр (сонголтыг алгасна)          [string]
  -m, --method      нэвтрэх аргын нэр (арга сонголтыг алгасна)                              [string]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt providers logout --help 1`] = `
"mongolgpt providers logout [provider]

тохируулсан үйлчилгээ үзүүлэгчээс гарах

Positionals:
  provider  гарах үйлчилгээ үзүүлэгчийн ID эсвэл нэр                                        [string]

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt agent create --help 1`] = `
"mongolgpt agent create

шинэ agent үүсгэх

Options:
  -h, --help                  тусламж харуулах                                             [boolean]
  -v, --version               хувилбарын дугаар харуулах                                   [boolean]
      --print-logs            логийг stderr рүү хэвлэх                                     [boolean]
      --log-level             логийн түвшин     [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  гадаад plugin-гүй ажиллуулах                                 [boolean]
      --path                  agent файлыг үүсгэх хавтасны зам                              [string]
      --description           agent юу хийх ёстойг тайлбарлах                               [string]
      --mode                  agent-ийн горим       [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  зөвшөөрөх permission-уудыг таслалаар тусгаарласан жагсаалт (анхдагч:
                              бүгд). Боломжтой: "bash, read, edit, glob, grep, webfetch, task,
                              todowrite, websearch, lsp, skill"                             [string]
  -m, --model                 ашиглах загвар, provider/model форматтай                      [string]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt agent list --help 1`] = `
"mongolgpt agent list

боломжтой бүх agent-ийг жагсаах

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt session list --help 1`] = `
"mongolgpt session list

сешнүүдийг жагсаах

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]
  -n, --max-count   хамгийн сүүлийн N сешнээр хязгаарлах                                    [number]
      --format      гаралтын формат           [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt session delete --help 1`] = `
"mongolgpt session delete <sessionID>

сешн устгах

Positionals:
  sessionID  устгах сешний ID                                                    [string] [required]

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt github install --help 1`] = `
"mongolgpt github install

GitHub agent суулгах

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt github run --help 1`] = `
"mongolgpt github run

GitHub agent ажиллуулах

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]
      --event       agent ажиллуулах GitHub mock event                                      [string]
      --token       GitHub personal access token (github_pat_********)                      [string]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt db path --help 1`] = `
"mongolgpt db path

database-ийн замыг хэвлэх

Options:
  -h, --help        тусламж харуулах                                                       [boolean]
  -v, --version     хувилбарын дугаар харуулах                                             [boolean]
      --print-logs  логийг stderr рүү хэвлэх                                               [boolean]
      --log-level   логийн түвшин               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад plugin-гүй ажиллуулах                                           [boolean]"
`;
